Force using no std

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = ["projects/*"]
 default-members = [
     "projects/sexpr",
+    "projects/indentation",
 ]
 exclude = [
     "projects/.DS_Store",
