--- a/projects/indentation/Cargo.toml
+++ b/projects/indentation/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "indentation"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Aster <192607617@qq.com>"]
 categories = ["text-processing"]
 description = "Indentation Formatter"
 keywords = ["indentation", "formatter"]
-repository = "https://github.com/oovm/awsl-rs"
+homepage = "https://github.com/ygg-lang/pex-lisp"
+repository = "https://github.com/ygg-lang/pex-lisp"
+documentation = "https://docs.rs/indentation"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
